[package]
name = "fixed_width"
version = "0.4.0"
authors = ["Tom King <twking7@gmail.com>"]
repository = "https://github.com/twking7/fixed_width/fixed_width"
description = "A fixed width data parser."
license = "MIT"
edition = "2018"

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_bytes = "0.11"
serde_derive = "1.0"
