[package]
name = "fixed_width_derive"
version = "0.4.0"
authors = ["Tom King <twking7@gmail.com>"]
repository = "https://github.com/twking7/fixed_width/fixed_width_derive"
description = "Derive trait for use with the fixed_width crate."
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "parsing"] }
quote = "1.0"
fixed_width = { version = "0.3.0" }

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
