[package]
name = "fixed_width_derive"
version = "0.5.1"
authors = ["Tom King <twking7@gmail.com>"]
repository = "https://github.com/twking7/fixed_width/fixed_width_derive"
description = "Derive trait for use with the fixed_width crate."
license = "MIT"
edition = "2018"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }

[dev-dependencies]
fixed_width = { path = "../fixed_width" }
serde = "1.0"
serde_derive = "1.0"
